# CheatCard

./: .gitignore  .gitmodules  CMakeLists.txt  Privacy Policy.md  README.md  Terms & Conditions.md  doxygen.conf  init.sh  plug.pro
src/API/: CMakeLists.txt
src/API/private/: apiv0.cpp  apiv0.h  apiv1.cpp  apiv1.h  apiv2.cpp  apiv2.h  apiv3.cpp  apiv3.h  idataconvertor.cpp  idataconvertor.h
src/API/public/: api.cpp  api.h
src/CheatCardServer/: CMakeLists.txt  cheatcardservice.cpp  cheatcardservice.h  main.cpp
src/CheatCardServer/Deploy/: CheatCardServer.json.in
src/Core/: CMakeLists.txt
src/DB/: CMakeLists.txt  db.qrc
src/DB/private/: appdatabase.cpp  appdatabase.h  dbv1.cpp  dbv1.h
src/DB/public/: db.cpp  db.h
src/GUI/: CMakeLists.txt  CardsIcons.qrc  CheatCard.qrc  CheatCardGui.qrc  qtquickcontrols2.conf
src/GUI/CheatCard/: CheatCard.cpp  CheatCard.h  seller.cpp  seller.h  server.cpp  visitor.cpp
src/GUI/CheatCardGui/: CheatCard.cpp  CheatCard.h  gui_global.h  ibilling.cpp  ibilling.h  pillsselftest.cpp  pillsselftest.h
src/GUI/CheatCardModule/: About.qml  ActivityProcessor.qml  AdditionalInformationForSeller.qml  AppearanceCustomPage.qml  CardsListView.qml  CheatCard.qml  ClientPage.qml  ColorOverlayQr.qml  ColorOverlayUser.qml  ColorPicker.qml  ConnectionStatus.qml  Contacts.qml  CreateCardView.qml  DiagnoticPage.qml  EditCardView.qml  EditUserView.qml  ExportUserKeyPage.qml  FirstRunPage.qml  FreeItemsView.qml  ImportUserKeyPage.qml  IncludeRecoveryWordPage.qml  IncomeView.qml  ItemsView.qml  MainActivity.qml  NetIndModel.qml  NetIndicatorModel.qml  PageHelpSeller.qml  PageHelpVisitor.qml  PageShareApp.qml  PermissionsView.qml  QrCodeControl.qml  QrCodeView.qml  QrScanner.qml  RecoveryPage.qml  RegistrationFinishedPage.qml  ScannerOverlay.qml  SellerStatistic.qml  Settings.qml  ShaderColorOverlay.qml  ShaderLogo.qml  (+7 more)
src/GUI/languages/: be.ts  by.ts  en.ts  ka.ts  pl.ts  ru.ts  sr-ME.ts  sr.ts  sr_ME.ts  uk.ts
src/GUI/private/: aboutmodel.cpp  aboutmodel.h  abstrcattablemodelwithheaders.cpp  abstrcattablemodelwithheaders.h  activityprocessormodel.cpp  activityprocessormodel.h  cardmodel.cpp  cardmodel.h  cardproxymodel.cpp  cardproxymodel.h  cardslistmodel.cpp  cardslistmodel.h  config.cpp  config.h  createcardmodel.cpp  createcardmodel.h  datastructures.cpp  firstpackagereceiver.cpp  firstpackagereceiver.h  icardlistmodel.cpp  icardlistmodel.h  imagebackgroundsmodel.cpp  imagebackgroundsmodel.h  imagelogomodel.cpp  imagelogomodel.h  imageprovider.cpp  imageprovider.h  imageresponse.cpp  imageresponse.h  imagesstoragemodel.cpp  imagesstoragemodel.h  importexportusermodel.cpp  importexportusermodel.h  inetidicatormodel.cpp  inetidicatormodel.h  iplatformtools.cpp  iplatformtools.h  itemsmodel.cpp  itemsmodel.h  languagesmodel.cpp  (+34 more)
src/Interfaces/: CMakeLists.txt
src/Interfaces/public/: interfaces.cpp  interfaces.h
src/RC/: CMakeLists.txt  CardsIcons.qrc  CheatCard.qrc  RegularCustomer.qrc  qtquickcontrols2.conf
src/RC/CheatCard/: CheatCard.h  CheatCard_global.h  applicationversion.cpp  applicationversion.h  appversion.cpp  appversion.h  basenode.cpp  basenode.h  basenodev1.cpp  basenodev1.h  card.cpp  card.h  carddatarequest.cpp  carddatarequest.h  cardstatusrequest.cpp  cardstatusrequest.h  clearolddata.cpp  clearolddata.h  client.cpp  client.h  contacts.cpp  core_global.h  core_global.h.in  database.cpp  database.h  dataconvertor.cpp  dataconvertor.h  datastructures.cpp  datastructures.h  iconnectorbackend.cpp  iconnectorbackend.h  itargetnode.cpp  itargetnode.h  node.cpp  node.h  nodeinfo.cpp  nodeinfo.h  nodetype.cpp  nodetype.h  requesttoken.cpp  (+28 more)
src/RC/CheatCardModule/: CardsListView.qml  CheatCard.qml  ClientPage.qml  ColorPicker.qml  ConnectionStatus.qml  EditCardView.qml  EditUserView.qml  FirstRunPage.qml  FreeItemsView.qml  ItemsView.qml  MainActivity.qml  RegistrationFinishedPage.qml  SallerPage.qml  WaitConnectView.qml
src/RC/RegularCustomer/: RegularCustomer.cpp  RegularCustomer.h  RegularCustomer_global.h  database.cpp  database.h  iconnectorbackend.cpp  iconnectorbackend.h
src/RC/RegularCustomerModule/: CardsListView.qml  ClientPage.qml  ColorPicker.qml  EditCardView.qml  EditUserView.qml  FirstRunPage.qml  ItemsView.qml  RegistrationFinishedPage.qml  RegularCustomer.qml  TextFieldWithLogo.qml  qmldir
src/RC/android/: AndroidManifest.xml  build.gradle  gradle.properties
src/RC/languages/: en.ts  pl.ts  ru.ts  uk.ts
src/RC/private/: card.cpp  card.h  cardmodel.cpp  cardmodel.h  cardslistmodel.cpp  cardslistmodel.h  config.cpp  config.h  contacts.cpp  contacts.h  database.cpp  database.h  datastructures.cpp  datastructures.h  iconnectorbackend.cpp  iconnectorbackend.h  imageprovider.cpp  imageprovider.h  itargetnode.h  itemsmodel.h  mainmodel.cpp  mainmodel.h  nfcbackend.cpp  nfcbackend.h  nfcnode.cpp  nfcnode.h  saller.cpp  saller.h  sallerscards.cpp  sallerscards.h  session.cpp  session.h  user.cpp  user.h  usermodel.cpp  usermodel.h  userscards.cpp  userscards.h  waitconnectionmodel.cpp  waitconnectionmodel.h
src/RCApp/: CMakeLists.txt  androidbilling.cpp  androidbilling.h  desktopbilling.cpp  desktopbilling.h  javaprovider.cpp  javaprovider.h  main.cpp  novalidationbilling.cpp
src/RCApp/android/: build.gradle  (+3 more)
tests/: CMakeLists.txt  TestResources.qrc  tstMain.cpp
tests/sql/: DBv6.db.sql
tests/units/: apitest.cpp  apitest.h  cheatcardtestshelper.cpp  cheatcardtestshelper.h  connectiontest.cpp  connectiontest.h  contactstest.cpp  contactstest.h  exampletest.cpp  exampletest.h  fixbrokenuserstest.cpp  fixbrokenuserstest.h  fixdbidspilltest.cpp  fixdbidspilltest.h  restoredatatest.cpp  restoredatatest.h  securitytest.cpp  securitytest.h  test.cpp  test.h  testclient.cpp  testclient.h  testdatabasewrapper.cpp  testdatabasewrapper.h  testdatatransfer.cpp  testdatatransfer.h  testdatatransfersocket.cpp  testdatatransfersocket.h  testseller.cpp  testseller.h  testsellerssl.cpp  testsellerssl.h  testserver.cpp  testserver.h  testserverssl.cpp  testserverssl.h  testutils.cpp  testutils.h  testvisitor.cpp  testvisitor.h  (+6 more)
(+328 files in other folders)
